# pep-mesh

./: Cargo.toml  README.md
examples/: catmull_clark.rs  cube.ply  io_test_input.ply  ply_io.rs  ply_io_halfedge.rs  ply_io_trimesh.rs
src/: lib.rs
src/halfedge/: face.rs  halfedge.rs  halfedge_mesh.rs  mod.rs  vertex.rs
src/io/: mod.rs  ply.rs
src/io/ply/: halfedge.rs  mod.rs  trimesh.rs
src/trimesh/: attribute.rs  mod.rs  trimesh.rs
